--- a/rate-limiter/build.gradle
+++ b/rate-limiter/build.gradle
@@ -11,6 +11,10 @@ repositories {
 
 dependencies {
     implementation "javax.servlet:javax.servlet-api:3.0.1"
+    implementation 'ch.qos.logback:logback-classic:1.1.7'
+    // https://mvnrepository.com/artifact/org.springframework/spring-core
+    implementation "org.springframework:spring-core:4.2.5.RELEASE"
+
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
